--- a/OGLViz/OGLViz/OGLViz.vcxproj.filters
+++ b/OGLViz/OGLViz/OGLViz.vcxproj.filters
@@ -24,9 +24,15 @@
     <ClCompile Include="..\Include\shaders\shader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="control.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="shaders\shader.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="control.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
