adding a couple more steps
separating out the texture loader,
add obj loader so objs dont need to be hardcoded in main,
vbo indexer added,
updated reads and file opening to 'safe'  versions

--- a/OGLViz/OGLViz/OGLViz.vcxproj
+++ b/OGLViz/OGLViz/OGLViz.vcxproj
@@ -147,9 +147,15 @@
     <ClCompile Include="Fft.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="control.cpp" />
+    <ClCompile Include="objloader.cpp" />
+    <ClCompile Include="vboindexer.cpp" />
+    <ClCompile Include="texture.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="control.hpp" />
+    <ClInclude Include="vboindexer.hpp" />
+    <ClInclude Include="texture.hpp" />
+    <ClInclude Include="objloader.hpp" />
     <ClInclude Include="shaders\shader.hpp" />
   </ItemGroup>
   <ItemGroup>
